--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=1024">
 <title>LAPORAN KAS BLOK D PERUMAHAN GRIYA FAMILY 3</title>
-<link rel="preload" href="https://ik.imagekit.io/a0mxn2ls1/logo.png" as="image">
+<link rel="preload" href="https://ik.imagekit.io/k8plwfarx/logo.png" as="image">
 <style>
  /* CSS UNTUK POPUP BUKTI DRIVE */
 #buktiModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:5000; align-items:center; justify-content:center; }
@@ -204,14 +204,14 @@ Copyright © 2026 Administrasi KAS BLOK D PERUMAHAN GRIYA FAMILY 3. Seluruh Hak 
 </div>
 
 <div id="welcomeScreen">
-    <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
+    <img src="https://ik.imagekit.io/k8plwfarx/logo.png" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS BLOK D PERUMAHAN GRIYA FAMILY 3</h1>
     <p>Built and developed by Fajar Ilmanosa Viar . <b>V1.0.0</b> . Copyright © 2026 Blok D GF3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
 <div class="logo-mawar-container" id="logoHeaderContainer">
-    <img src="https://ik.imagekit.io/a0mxn2ls1/logo.png" alt="LOGO" class="logo-img">
+    <img src="https://ik.imagekit.io/k8plwfarx/logo.png" alt="LOGO" class="logo-img">
     <div id="userGreeting">Selamat datang Bpk. ...</div>
 </div>
 
@@ -1376,6 +1376,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
