--- a/index.html
+++ b/index.html
@@ -512,7 +512,10 @@ const skrg = new Date();
 let bulan = skrg.getMonth(), tahun = skrg.getFullYear();
 let isAdmin=false, currentTheme='', currentUserName='', modeRespon=false;
 const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUSTUS','SEPTEMBER','OKTOBER','NOVEMBER','DESEMBER'];
-const namaAnggotaAwal=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
+const namaAnggotaAwal=['SISA KAS SEBELUMNYA','BAPAK1','BAPAK2','BAPAK3','BAPAK4','BAPAK5','BAPAK6','BAPAK7','BAPAK8','BAPAK9','BAPAK10','BAPAK11','BAPAK12','BAPAK13','BAPAK14','BAPAK15','BAPAK16','BAPAK17','BAPAK18','BAPAK19','BAPAK20','BAPAK21','BAPAK22','BAPAK23','BAPAK24','BAPAK25',
+'BAPAK26','BAPAK27','BAPAK28','BAPAK29','BAPAK30','BAPAK31','BAPAK32','BAPAK33','BAPAK34','BAPAK35','BAPAK36','BAPAK37','BAPAK38','BAPAK39','BAPAK40','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','HILMAN','NANO','TEGUH','BAPAK49','BAPAK50',
+'BAPAK51','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','BAPAK58','BAPAK59','AGUS','LUKMAN','BAPAK62','BAPAK63','BAPAK64','BAPAK65','BAPAK66','BAPAK67','BAPAK68','BAPAK69','BAPAK70','BAPAK71','BAPAK72','BAPAK73','BAPAK74','BAPAK75',
+'BAPAK76','BAPAK77','BAPAK78','BAPAK79','BAPAK80','BAPAK81','BAPAK82','BAPAK83','BAPAK84','BAPAK85','BAPAK86','BAPAK87','BAPAK88','BAPAK89','BAPAK90','BAPAK91','BAPAK92','BAPAK93','BAPAK94','BAPAK95','BAPAK96','BAPAK97','BAPAK98','BAPAK99','BAPAK100'];
 /* --- DATABASE ALIAS PERANGKAT GLOBAL --- */
 const merekWargaGlobal = {
     "RIZAL": "REDMI", "ROMI": "ESIA", "TRI": "XIAOMI", "ANIS": "OPPO",
@@ -1376,6 +1379,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
