--- a/index.html
+++ b/index.html
@@ -480,49 +480,49 @@ firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 const daftarKunci = {
     // BLOK D1 (BAPAK1-BAPAK25)
-    "D1/1": "BAPAK1", "D1/2": "BAPAK2", "D1/3": "BAPAK3", "D1/4": "BAPAK4", "D1/5": "BAPAK5",
-    "D1/6": "BAPAK6", "D1/7": "BAPAK7", "D1/8": "BAPAK8", "D1/9": "BAPAK9", "D1/10": "BAPAK10",
-    "D1/11": "BAPAK11", "D1/12": "BAPAK12", "D1/13": "BAPAK13", "D1/14": "BAPAK14", "D1/15": "BAPAK15",
-    "D1/16": "BAPAK16", "D1/17": "BAPAK17", "D1/18": "BAPAK18", "D1/19": "BAPAK19", "D1/20": "BAPAK20",
-    "D1/21": "BAPAK21", "D1/22": "BAPAK22", "D1/23": "BAPAK23", "D1/24": "BAPAK24", "D1/25": "BAPAK25",
+    "D1/1": "BAPAK1 D1/1", "D1/2": "BAPAK2 D1/2", "D1/3": "BAPAK3 D1/3", "D1/4": "BAPAK4 D1/4", "D1/5": "BAPAK5 D1/5",
+    "D1/6": "BAPAK6 D1/6", "D1/7": "BAPAK7 D1/7", "D1/8": "BAPAK8 D1/8", "D1/9": "BAPAK9 D1/9", "D1/10": "BAPAK10 D1/10",
+    "D1/11": "BAPAK11 D1/11", "D1/12": "ARIPIN D1/12", "D1/13": "BAPAK13 D1/13", "D1/14": "BAPAK14 D1/14", "D1/15": "BAPAK15 D1/15",
+    "D1/16": "BAPAK16 D1/16", "D1/17": "HARTO D1/17", "D1/18": "NGADINO D1/18", "D1/19": "MUSTOFA D1/19", "D1/20": "BAPAK20 D1/20",
+    "D1/21": "BAPAK21 D1/21", "D1/22": "BAPAK22 D1/22", "D1/23": "BAPAK23 D1/23", "D1/24": "BAPAK24 D1/24", "D1/25": "BAPAK25 D1/25", "D1/26": "SOPAN D1/26", "D1/27": "AGUNG D1/27",
 
     // BLOK D2 (BAPAK26-BAPAK50)
-    "D2/1": "BAPAK26", "D2/2": "BAPAK27", "D2/3": "BAPAK28", "D2/4": "BAPAK29", "D2/5": "BAPAK30",
-    "D2/6": "BAPAK31", "D2/7": "BAPAK32", "D2/8": "BAPAK33", "D2/9": "BAPAK34", "D2/10": "BAPAK35",
-    "D2/11": "BAPAK36", "D2/12": "BAPAK37", "D2/13": "BAPAK38", "D2/14": "BAPAK39", "D2/15": "BAPAK40",
-    "D2/16": "IRAWAN", "D2/17": "RIAN", "D2/18": "MULYADIE", "D2/19": "HELDI", "D2/20": "HILMAN", 
-    "D2/21": "HILMAN", "D2/22": "NANO", "D2/23": "TEGUH", "D2/24": "BAPAK49", "D2/25": "BAPAK50",
+    "D2/1": "BAPAK28 D2/1", "D2/2": "BAPAK29 D2/2", "D2/3": "BAPAK30 D2/3", "D2/4": "NGISOMUDIN D2/4", "D2/5": "VIJAY D2/5",
+    "D2/6": "BAPAK33 D2/6", "D2/7": "ANJAR D2/7", "D2/8": "BAPAK35 D2/8", "D2/9": "BAPAK36 D2/9", "D2/10": "BAPAK37 D2/10",
+    "D2/11": "BAPAK38 D2/11", "D2/12": "BAPAK39 D2/12", "D2/13": "BAPAK40 D2/13", "D2/14": "BAPAK41 D2/14", "D2/15": "RUMAH KOSONG D2/15",
+    "D2/16": "IRAWAN D2/16", "D2/17": "RIAN D2/17", "D2/18": "MULYADIE D2/18", "D2/19": "HELDI D2/19", "D2/20": "HILMAN D2/20", 
+    "D2/21": "HILMAN D2/21", "D2/22": "NANO D2/22", "D2/23": "TEGUH D2/23", "D2/24": "RUMAH KOSONG D2/24", "D2/25": "RUMAH KOSONG D2/25",
 
     // BLOK D3 (BAPAK51-BAPAK75)
-    "D3/1": "BAPAK51", "D3/2": "RIZAL", "D3/3": "ROMI", "D3/4": "TRI", "D3/5": "ANIS",
-    "D3/6": "FAJAR DJAKA", "D3/7": "FAJAR SHANUM", "D3/8": "BAPAK58", "D3/9": "BAPAK59", "D3/10": "AGUS",
-    "D3/11": "LUKMAN", "D3/12": "BAPAK62", "D3/13": "BAPAK63", "D3/14": "BAPAK64", "D3/15": "BAPAK65",
-    "D3/16": "BAPAK66", "D3/17": "BAPAK67", "D3/18": "BAPAK68", "D3/19": "BAPAK69", "D3/20": "BAPAK70",
-    "D3/21": "BAPAK71", "D3/22": "BAPAK72", "D3/23": "BAPAK73", "D3/24": "BAPAK74", "D3/25": "BAPAK75",
+    "D3/1": "RUMAH KOSONG D3/1", "D3/2": "RIZAL D3/2", "D3/3": "ROMI D3/3", "D3/4": "TRI D3/4", "D3/5": "ANIS D3/5",
+    "D3/6": "FAJAR DJAKA D3/6", "D3/7": "FAJAR SHANUM D3/7", "D3/8": "RUMAH KOSONG D3/8", "D3/9": "RUMAH KOSONG D3/9", "D3/10": "AGUS D3/10",
+    "D3/11": "LUKMAN D3/11", "D3/12": "BAPAK64 D3/12", "D3/13": "HARRIS D3/13", "D3/14": "BAPAK66 D3/14", "D3/15": "UMAR D3/15",
+    "D3/16": "EGI D3/16", "D3/17": "AMIR D3/17", "D3/18": "BAPAK70 D3/18", "D3/19": "BAPAK71 D3/19", "D3/20": "MULYAWAN D3/20",
+    "D3/21": "BAPAK73 D3/21", "D3/22": "BAPAK74 D3/22", "D3/23": "BAPAK75 D3/23", "D3/24": "BAPAK76 D3/24", "D3/25": "BAPAK77 D3/25",
 
     // BLOK D4 (BAPAK76-BAPAK100)
-    "D4/1": "BAPAK76", "D4/2": "BAPAK77", "D4/3": "BAPAK78", "D4/4": "BAPAK79", "D4/5": "BAPAK80",
-    "D4/6": "BAPAK81", "D4/7": "BAPAK82", "D4/8": "BAPAK83", "D4/9": "BAPAK84", "D4/10": "BAPAK85",
-    "D4/11": "BAPAK86", "D4/12": "BAPAK87", "D4/13": "BAPAK88", "D4/14": "BAPAK89", "D4/15": "BAPAK90",
-    "D4/16": "BAPAK91", "D4/17": "BAPAK92", "D4/18": "BAPAK93", "D4/19": "BAPAK94", "D4/20": "BAPAK95",
-    "D4/21": "BAPAK96", "D4/22": "BAPAK97", "D4/23": "BAPAK98", "D4/24": "BAPAK99", "D4/25": "BAPAK100"
+    "D4/1": "BAPAK78 D4/1", "D4/2": "LILIK D4/2", "D4/3": "BAPAK80 D4/3", "D4/4": "FERY D4/4", "D4/5": "BAPAK82 D4/5",
+    "D4/6": "BAPAK83 D4/6", "D4/7": "BAPAK84 D4/7", "D4/8": "BUDI D4/8", "D4/9": "FADLI D4/9", "D4/10": "UMAR VERMAK D4/10",
+    "D4/11": "BAPAK88 D4/11", "D4/12": "BAPAK89 D4/12", "D4/13": "MAMAN D4/13", "D4/14": "EDI D4/14", "D4/15": "BAPAK92 D4/15",
+    "D4/16": "BAPAK93 D4/16", "D4/17": "BAPAK94 D4/17", "D4/18": "BAPAK95 D4/18", "D4/19": "BAPAK96 D4/19", "D4/20": "BAPAK97 D4/20",
+    "D4/21": "BAPAK98 D4/21", "D4/22": "BAPAK99 D4/22", "D4/23": "BAPAK100 D4/23", "D4/24": "BAPAK101 D4/24", "D4/25": "BAPAK102 D4/25"
 };
 
 const skrg = new Date();
 let bulan = skrg.getMonth(), tahun = skrg.getFullYear();
 let isAdmin=false, currentTheme='', currentUserName='', modeRespon=false;
 const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUSTUS','SEPTEMBER','OKTOBER','NOVEMBER','DESEMBER'];
-const namaAnggotaAwal=['SISA KAS SEBELUMNYA','BAPAK1','BAPAK2','BAPAK3','BAPAK4','BAPAK5','BAPAK6','BAPAK7','BAPAK8','BAPAK9','BAPAK10','BAPAK11','BAPAK12','BAPAK13','BAPAK14','BAPAK15','BAPAK16','BAPAK17','BAPAK18','BAPAK19','BAPAK20','BAPAK21','BAPAK22','BAPAK23','BAPAK24','BAPAK25',
-'BAPAK26','BAPAK27','BAPAK28','BAPAK29','BAPAK30','BAPAK31','BAPAK32','BAPAK33','BAPAK34','BAPAK35','BAPAK36','BAPAK37','BAPAK38','BAPAK39','BAPAK40','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','HILMAN','NANO','TEGUH','BAPAK49','BAPAK50',
-'BAPAK51','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','BAPAK58','BAPAK59','AGUS','LUKMAN','BAPAK62','BAPAK63','BAPAK64','BAPAK65','BAPAK66','BAPAK67','BAPAK68','BAPAK69','BAPAK70','BAPAK71','BAPAK72','BAPAK73','BAPAK74','BAPAK75',
-'BAPAK76','BAPAK77','BAPAK78','BAPAK79','BAPAK80','BAPAK81','BAPAK82','BAPAK83','BAPAK84','BAPAK85','BAPAK86','BAPAK87','BAPAK88','BAPAK89','BAPAK90','BAPAK91','BAPAK92','BAPAK93','BAPAK94','BAPAK95','BAPAK96','BAPAK97','BAPAK98','BAPAK99','BAPAK100'];
+const namaAnggotaAwal=['SISA KAS SEBELUMNYA','BAPAK1 D1/1','BAPAK2 D1/2','BAPAK3 D1/3','BAPAK4 D1/4','BAPAK5 D1/5','BAPAK6 D1/6','BAPAK7 D1/7','BAPAK8 D1/8','BAPAK9 D1/9','BAPAK10 D1/10','BAPAK11 D1/11','ARIPIN D1/12','BAPAK13 D1/13','BAPAK14 D1/14','BAPAK15 D1/15','BAPAK16 D1/16','HARTO D1/17','NGADINO D1/18','MUSTOFA D1/19','BAPAK20 D1/20','BAPAK21 D1/21','BAPAK22 D1/22','BAPAK23 D1/23','BAPAK24 D1/24','BAPAK25 D1/25',
+'SOPAN D1/26','AGUNG D1/27','BAPAK28 D2/1','BAPAK29 D2/2','BAPAK30 D2/3','NGISOMUDIN D2/4','VIJAY D2/5','BAPAK33 D2/6','ANJAR D2/7','BAPAK35 D2/8','BAPAK36 D2/9','BAPAK37 D2/10','BAPAK38 D2/11','BAPAK39 D2/12','BAPAK40 D2/13','BAPAK41 D2/14','RUMAH KOSONG D2/15','IRAWAN D2/16','RIAN D2/117','MULYADIE D2/18','HELDI D2/19','HILMAN D2/20','HILMAN D2/21','NANO D2/22','TEGUH D2/23','RUMAH KOSONG D2/24','RUMAH KOSONG D2/25',
+'RUMAH KOSONG D3/1','RIZAL D3/2','ROMI D3/3','TRI D3/4','ANIS D3/5','FAJAR DJAKA D3/6','FAJAR SHANUM D3/7','RUMAH KOSONG D3/8','RUMAH KOSONG D3/9','AGUS D3/10','LUKMAN D3/11','BAPAK64 D3/12','HARRIS D3/13','BAPAK66 D3/14','UMAR D3/15','EGI D3/16','AMIR D3/17','BAPAK70 D3/18','BAPAK71 D3/19','MULYAWAN D3/20','BAPAK73 D3/21','BAPAK74 D3/22','BAPAK75 D3/23','BAPAK76 D3/24','BAPAK77 D3/25',
+'BAPAK78 D4/1','LILIK D4/2','BAPAK80 D4/3','FERY D4/4','BAPAK82 D4/5','BAPAK83 D4/6','BAPAK84 D4/7','BUDI D4/8','FADLI D4/9','UMAR VERMAK D4/10','BAPAK88 D4/11','BAPAK89 D4/12','MAMAN D4/13','EDI D4/14','BAPAK92 D4/15','BAPAK93 D4/16','BAPAK94 D4/17','BAPAK95 D4/18','BAPAK96 D4/19','BAPAK97 D4/20','BAPAK98 D4/21','BAPAK99 D4/22','BAPAK100 D4/23','BAPAK101 D4/24','BAPAK102 D4/25'];
 /* --- DATABASE ALIAS PERANGKAT GLOBAL --- */
 const merekWargaGlobal = {
     "RIZAL": "REDMI", "ROMI": "ESIA", "TRI": "XIAOMI", "ANIS": "OPPO",
     "FAJAR DJAKA": "VIVAN", "AGUS": "BLACKBERRY", "LUKMAN": "POCO",
     "IRAWAN": "NOKIA", "RIAN": "SAMSUNG", "MULYADIE": "SONY",
     "HELDI": "ASUS", "HILMAN": "HUAWEI", "NANO": "SMARTFREN", "TEGUH": "VIVO",
-    "FAJAR SHANUM": ["INFINIX HOT 12 PLAY", "ADVAN TBOOK", "APPLE IPHONE X", "SAMSUNG A06", "INFINIX HOT 9 PLAY", "POCO C71"]
+    "FAJAR SHANUM": ["INFINIX HOT 12 PLAY", "ADVAN TBOOK", "APPLE IPHONE X", "INFINIX HOT 9 PLAY", "SAMSUNG A06", "POCO C71"]
 };
 
 /* Fungsi Pembentuk Topeng Urutan Terkunci ID */
@@ -1379,6 +1379,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
