--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Copyright © 2026 Administrasi KAS BLOK D PERUMAHAN GRIYA FAMILY 3. Seluruh Hak 
 <div id="welcomeScreen">
     <img src="https://ik.imagekit.io/k8plwfarx/logo.png" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS BLOK D PERUMAHAN GRIYA FAMILY 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V1.0.6</b> . Copyright © 2026 Blok D GF3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V1.0.7</b> . Copyright © 2026 Blok D GF3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -302,7 +302,7 @@ Copyright © 2026 Administrasi KAS BLOK D PERUMAHAN GRIYA FAMILY 3. Seluruh Hak 
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Shanum D3/7</b> | V1.0.6 Supreme Security and Terms | Copyright &copy; 2026 Blok D GF3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Shanum D3/7</b> | V1.0.7 Supreme Security and Terms | Copyright &copy; 2026 Blok D GF3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -612,6 +612,11 @@ async function masukWeb() {
         else if(bersih.startsWith('D2')) bersih = "D2/" + bersih.substring(2);
         else if(bersih.startsWith('D3')) bersih = "D3/" + bersih.substring(2);
         else if(bersih.startsWith('D4')) bersih = "D4/" + bersih.substring(2);
+}
+
+// Tambahkan ini tepat di bawah kurung kurawal tutup di atas, Tuan:
+    if (bersih.includes('/0')) {
+    bersih = bersih.replace('/0', '/');
 }
     
     // Jika warga hanya ngetik angkanya saja (misal: 23), kita cari di daftarKunci
@@ -1379,6 +1384,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
