--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ async function masukWeb() {
     if (daftarKunci[bersih]) { 
         await prosesMasukHardware(daftarKunci[bersih], bersih); 
     } else { 
-        alert("❌ NOMOR RUMAH TIDAK TERDAFTAR!\nJangan salah tulis yaa pak, kalo nulisnya udah bener tapi masih ga bisa coba japri ke bendahara"); 
+        alert("❌ NOMOR RUMAH TIDAK TERDAFTAR!\nJangan salah tulis yaa pak!\nTulis nomor blok rumah anda sendiri! Kalo nulisnya udah benar tapi masih gak bisa masuk coba japri ke bendahara yaa"); 
     }
 } // <--- PENUTUP FUNGSI masukWeb() YANG HILANG
 
@@ -1384,6 +1384,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
