--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ async function masukWeb() {
     if (daftarKunci[bersih]) { 
         await prosesMasukHardware(daftarKunci[bersih], bersih); 
     } else { 
-        alert("❌ NOMOR BLOK RUMAH TIDAK TERDAFTAR!\nJangan salah nulis yaa pak!\nTulis nomor blok rumah anda sendiri!\nKalo nulisnya udah benar tapi masih gak bisa masuk coba japri ke bendahara yaa"); 
+        alert("❌ NOMOR BLOK RUMAH TIDAK TERDAFTAR!\nJangan salah nulis yaa pak!\nTulis nomor blok rumah anda sendiri!\nKalo nulisnya udah benar tapi masih gak bisa masuk, coba japri ke bendahara yaa"); 
     }
 } // <--- PENUTUP FUNGSI masukWeb() YANG HILANG
 
@@ -1384,6 +1384,7 @@ window.onbeforeunload = function() {
 </div>
 </body>
 </html>
+
 
 
 
