--- a/index.html
+++ b/index.html
@@ -1479,37 +1479,43 @@ window.onbeforeunload = function() {
 // LOGIKA ADMIN HP ON/OFF (KONEKSI GOOGLE)
 // ==========================================
 
-// 1. Fungsi untuk memicu login Google Redirect
-function koneksiAdmin() {
+// 1. Fungsi untuk memicu login Google Redirect dengan Memori Permanen
+async function koneksiAdmin() {
     const provider = new firebase.auth.GoogleAuthProvider();
-    alert("JARVIS: MENGHUBUNGKAN KE SERVER GOOGLE, TUAN...");
-    firebase.auth().signInWithRedirect(provider);
+    try {
+        // Memaksa browser HP mengingat login Tuan (Anti-Loop)
+        await firebase.auth().setPersistence(firebase.auth.Auth.Persistence.LOCAL);
+        alert("JARVIS: MEMBUKA JALUR ENKRIPSI GOOGLE, TUAN...");
+        firebase.auth().signInWithRedirect(provider);
+    } catch (error) {
+        alert("🛑 SISTEM MEMORI ERROR: " + error.message);
+    }
 }
 
-// 2. Detektor otomatis untuk merubah status tombol
+// 2. Detektor otomatis untuk merubah status tombol (Fast Response)
 firebase.auth().onAuthStateChanged((user) => {
     const btnHP = document.getElementById('btnKoneksi');
     if (user && user.email === "fajarilmanosaviar@gmail.com") {
         if (btnHP) {
             btnHP.innerHTML = "✅ ADMIN HP ON 🔓";
-            btnHP.style.backgroundColor = "#27ae60"; // Hijau saat aktif
+            btnHP.style.backgroundColor = "#27ae60"; 
             btnHP.style.borderColor = "#1e8449";
-            btnHP.disabled = true; // Kunci agar tidak login berulang kali
+            btnHP.disabled = true; 
         }
-        console.log("Jarvis: Koneksi Admin Google Terdeteksi.");
+        console.log("Jarvis: Koneksi Admin Google Aktif.");
     } else {
         if (btnHP) {
             btnHP.innerHTML = "⛔ ADMIN HP OFF 🔒";
-            btnHP.style.backgroundColor = "#e74c3c"; // Merah saat mati
+            btnHP.style.backgroundColor = "#e74c3c"; 
             btnHP.style.borderColor = "#c0392b";
             btnHP.disabled = false;
         }
     }
 });
 
-// 3. Menangani hasil setelah kembali dari Google (Redirect Result)
+// 3. Menangani hasil Redirect dengan Penjemputan Paksa (Solusi Blokir Browser)
 firebase.auth().getRedirectResult().then((result) => {
-    if (result.user) {
+    if (result && result.user) {
         if (result.user.email === "fajarilmanosaviar@gmail.com") {
             alert("✅ VERIFIKASI BERHASIL! STATUS ADMIN HP SEKARANG: ON 🔓");
         } else {
@@ -1518,9 +1524,11 @@ firebase.auth().getRedirectResult().then((result) => {
         }
     }
 }).catch((error) => {
-    // Abaikan jika error hanya karena masalah jaringan saat loading awal
-    if (error.code !== "auth/network-request-failed") {
-        console.log("Jarvis: Menunggu perintah Tuan.");
+    // Memberikan info jika domain atau setelan browser bermasalah
+    if (error.code === "auth/unauthorized-domain") {
+        alert("🛑 DOMAIN BELUM TERDAFTAR DI FIREBASE CONSOLE, TUAN!");
+    } else if (error.code !== "auth/network-request-failed") {
+        console.log("Jarvis: Menunggu instruksi Tuan.");
     }
 });
 </script>
@@ -1544,6 +1552,7 @@ firebase.auth().getRedirectResult().then((result) => {
 </div>
 </body>
 </html>
+
 
 
 
